# BarebonesTheGame

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
source/components/board/: BoardBehaviorComponent.cpp  BoardBehaviorComponent.hpp
source/components/board/tiles/: DefaultTileComponent.cpp  DefaultTileComponent.hpp  TileBehaviorComponent.cpp  TileBehaviorComponent.hpp
source/components/skeletons/: BasicSkeletonSpriteComponent.cpp  BasicSkeletonSpriteComponent.hpp
source/gameObjects/: BoardBehaviorComponent.hpp  BoardObject.cpp  BoardObject.hpp  TileObject.cpp  TileObject.hpp
source/gameObjects/board/: BoardBehaviorComponent.cpp  BoardBehaviorComponent.hpp  BoardFactory.cpp  BoardFactory.hpp  BoardInputComponent.cpp  BoardInputComponent.hpp  BoardLayoutComponent.cpp  BoardLayoutComponent.hpp  BoardObject.cpp  BoardObject.hpp  BoardTurnManagerComponent.cpp  BoardTurnManagerComponent.hpp
source/gameObjects/board/components/: BoardBehaviorComponent.cpp  BoardBehaviorComponent.hpp
source/gameObjects/board/inputStates/: BoardInputState.cpp  BoardInputState.hpp  DefaultBoardInputState.cpp  DefaultBoardInputState.hpp  MovingCharacterBoardInputState.cpp  MovingCharacterBoardInputState.hpp  UsingSkillBoardInputState.cpp  UsingSkillBoardInputState.hpp
source/gameObjects/board/players/: PlayerBehaviorComponent.cpp  PlayerBehaviorComponent.hpp  PlayerFactory.cpp
source/gameObjects/board/tiles/: TileBehaviorComponent.cpp  TileBehaviorComponent.hpp  TileFactory.cpp  TileMeshComponent.cpp  TileMeshComponent.hpp
source/gameObjects/camera/: CameraBehaviorComponent.cpp  CameraBehaviorComponent.hpp
source/gameObjects/camera/states/: CameraDefaultState.cpp  CameraDefaultState.hpp  CameraFollowingCharacterState.cpp  CameraFollowingCharacterState.hpp  CameraFollowingPlayerState.cpp  CameraFollowingPlayerState.hpp  CameraInitialState.cpp  CameraInitialState.hpp  CameraMovingState.cpp  CameraMovingState.hpp  CameraObservingBoardState.cpp  CameraObservingBoardState.hpp  CameraPanningToBoardState.cpp  CameraPanningToBoardState.hpp  CameraState.cpp  CameraState.hpp
source/gameObjects/characters/: CharacterBehaviorComponent.cpp  CharacterBehaviorComponent.hpp  CharacterFactory.cpp  CharacterFactory.hpp  CharacterSkill.cpp  CharacterSkill.hpp  CharacterSkillComponent.cpp  CharacterSkillComponent.hpp  CharacterSpriteComponent.cpp  CharacterSpriteComponent.hpp  EffectListBehaviorComponent.cpp  EffectListBehaviorComponent.hpp  HealthBarBehaviorComponent.cpp  HealthBarBehaviorComponent.hpp  MoveSkill.hpp  MoveSkillComponent.cpp  MoveSkillComponent.hpp  Skill.cpp  StatusMessageBehaviorComponent.cpp  StatusMessageBehaviorComponent.hpp
source/gameObjects/characters/controllers/: CharacterController.cpp  CharacterController.hpp  DefaultCharacterController.cpp  DefaultCharacterController.hpp
source/gameObjects/characters/effectList/: EffectListBehaviorComponent.cpp  EffectListBehaviorComponent.hpp
source/gameObjects/characters/enemies/: EnemyBehaviorComponent.cpp  EnemyBehaviorComponent.hpp
source/gameObjects/characters/healthBar/: HealthBarMeshComponent.cpp  HealthBarMeshComponent.hpp
source/gameObjects/characters/movers/: CharacterMover.hpp  DefaultCharacterMover.cpp  DefaultCharacterMover.hpp  DiagonalCharacterMover.cpp  DiagonalCharacterMover.hpp
source/gameObjects/characters/states/: CharacterDefaultState.cpp  CharacterDefaultState.hpp  CharacterDyingState.cpp  CharacterDyingState.hpp  CharacterMovingState.cpp  CharacterMovingState.hpp  CharacterShakingState.cpp  CharacterShakingState.hpp  CharacterSpawningState.cpp  CharacterSpawningState.hpp  CharacterState.cpp  CharacterState.hpp
source/gameObjects/characters/statusMessage/: StatusMessageBehaviorComponent.cpp
source/gameObjects/effects/: BurningEffect.cpp  BurningEffect.hpp  DesecratedEffect.cpp  DesecratedEffect.hpp  Effect.cpp  Effect.hpp  SlowEffect.cpp  SlowEffect.hpp  TestEffect.cpp  TestEffect.hpp
source/gameObjects/gui/: ActionBehaviorComponent.cpp  ActionBehaviorComponent.hpp  ActionFactory.cpp  ActionFactory.hpp  CharacterInfoDisplayComponent.cpp  CharacterInfoDisplayComponent.hpp  CharacterMenuBehaviorComponent.cpp  CharacterMenuBehaviorComponent.hpp  CharacterMenuMeshComponent.cpp  CharacterMenuMeshComponent.hpp  FPSDisplay.cpp  FPSDisplay.hpp  MenuFactory.cpp  MenuFactory.hpp  MenuInputComponent.cpp  MenuLayoutComponent.cpp  MenuLayoutComponent.hpp  ScrollingMessageBehaviorComponent.cpp  ScrollingMessageBehaviorComponent.hpp  SkillActionBehaviorComponent.cpp  SkillActionBehaviorComponent.hpp  SkillMenuLayoutComponent.hpp  TextBoxComponent.cpp  TextBoxComponent.hpp  TurnDisplayComponent.cpp  TurnDisplayComponent.hpp
source/gameObjects/gui/actDisplay/: ActDisplayBehaviorComponent.cpp  (+3 more)
source/gameObjects/players/: PlayerBehaviorComponent.cpp  PlayerBehaviorComponent.hpp  PlayerFactory.hpp
source/gameObjects/skeletons/: BasicSkeletonObject.cpp  BasicSkeletonObject.hpp  SkeletonObject.cpp  SkeletonObject.hpp
source/gameObjects/skills/: AreaOfEffectSkill.cpp  AreaOfEffectSkill.hpp  SimpleSkill.cpp  SimpleSkill.hpp  SingleTargetSkill.cpp  SingleTargetSkill.hpp  Skill.cpp  Skill.hpp  SkillFactory.cpp  SkillFactory.hpp  VisualEffectFactory.cpp  VisualEffectFactory.hpp
source/gameObjects/util/: Acts.hpp  Colors.hpp  Fonts.hpp  InputComponent.cpp  InputComponent.hpp  InputManagerComponent.cpp  SceneFactory.cpp  Side.hpp  Signals.cpp  Signals.hpp  TileUtil.hpp
source/gameObjects/world/: BackgroundSpriteComponent.cpp  BackgroundSpriteComponent.hpp
source/resources/: attributions.txt
source/resources/shaders/: CharacterShader.frag  HealthBarFillShader.frag  HealthBarFillShader.vert  OutlineTextShader.frag  SkillActionShader.frag  TextShader.frag  TexturedMeshShader.frag  TexturedMeshShader.vert  TexturedMeshWithFadeShader.frag  TileShader.frag  TileShader.vert  UIShader.frag  UIShader.vert  UntexturedMeshWithFadeShader.frag
source/resources/sprites/: basicBrick.png~  clawEffectSpritesheet.png~  fireballSpellSprite.png~  grassTile.png~  healthBarBackground.png~  menuBox.png~  tempBG.png~
(+232 files in other folders)
