file(GLOB GAME_SOURCES main.cpp
                       gameObjects/camera/*.?pp
                       gameObjects/camera/states/*.?pp
                       gameObjects/characters/*.?pp
                       gameObjects/characters/controllers/*.?pp
                       gameObjects/characters/effectList/*.?pp
                       gameObjects/characters/healthBar/*.?pp
                       gameObjects/characters/movers/*.?pp
                       gameObjects/characters/states/*.?pp
                       gameObjects/characters/statusMessage/*.?pp
                       gameObjects/effects/*.?pp
                       gameObjects/gui/*.?pp
                       gameObjects/gui/actDisplay/*.?pp
                       gameObjects/gui/hintDisplay/*.?pp
                       gameObjects/gui/hintDisplay/states/*.?pp
                       gameObjects/gui/infoPanel/*.?pp
                       gameObjects/gui/menus/*.?pp
                       gameObjects/gui/menus/mainMenu/*.?pp
                       gameObjects/gui/menus/rewardsMenu/*.?pp
                       gameObjects/gui/menus/skillMenu/*.?pp
                       gameObjects/gui/menus/defeatMenu/*.?pp
                       gameObjects/gui/menus/victoryMenu/*.?pp
                       gameObjects/skills/*.?pp
                       gameObjects/skills/moveSkill/*.?pp
                       gameObjects/skills/removeCharacterSkill/*.?pp
                       gameObjects/skills/createCharacterSkill/*.?pp
                       gameObjects/skills/skillActions/*.?pp
                       gameObjects/skills/visualEffects/*.?pp
                       gameObjects/util/*.?pp
                       gameObjects/util/inputManager/*.?pp
                       gameObjects/util/sceneFactory/*.?pp
                       gameObjects/util/signals/*.?pp
                       gameObjects/world/background/*.?pp
                       gameObjects/world/board/*.?pp
                       gameObjects/world/board/states/*.?pp
                       gameObjects/world/board/players/*.?pp
                       gameObjects/world/board/players/aiPlayer/*.?pp
                       gameObjects/world/board/players/humanPlayer/*.?pp
                       gameObjects/world/board/players/humanPlayer/behaviorStates/*.?pp
                       gameObjects/world/board/players/humanPlayer/inputStates/*.?pp
                       gameObjects/world/board/tiles/*.?pp
                       gameObjects/world/board/tiles/defaultTile/*.?pp
                       gameObjects/world/board/tiles/desecratedTile/*.?pp)

add_executable(barebones ${GAME_SOURCES})
target_link_libraries(barebones PUBLIC
                      ${URSINE_LIBRARIES})
target_include_directories(barebones PUBLIC
                           ${URSINE_INCLUDE_DIRS}
                           gameObjects/camera
                           gameObjects/camera/states
                           gameObjects/characters
                           gameObjects/characters/controllers
                           gameObjects/characters/effectList
                           gameObjects/characters/healthBar
                           gameObjects/characters/movers
                           gameObjects/characters/states
                           gameObjects/characters/statusMessage
                           gameObjects/effects
                           gameObjects/gui
                           gameObjects/gui/actDisplay
                           gameObjects/gui/hintDisplay
                           gameObjects/gui/hintDisplay/states
                           gameObjects/gui/infoPanel
                           gameObjects/gui/menus
                           gameObjects/gui/menus/mainMenu
                           gameObjects/gui/menus/rewardsMenu
                           gameObjects/gui/menus/skillMenu
                           gameObjects/gui/menus/defeatMenu
                           gameObjects/gui/menus/victoryMenu
                           gameObjects/skills
                           gameObjects/skills/moveSkill
                           gameObjects/skills/createCharacterSkill
                           gameObjects/skills/removeCharacterSkill
                           gameObjects/skills/skillActions
                           gameObjects/skills/visualEffects
                           gameObjects/util
                           gameObjects/util/inputManager
                           gameObjects/util/sceneFactory
                           gameObjects/util/signals
                           gameObjects/world/background
                           gameObjects/world/board
                           gameObjects/world/board/states
                           gameObjects/world/board/players
                           gameObjects/world/board/players/aiPlayer
                           gameObjects/world/board/players/humanPlayer
                           gameObjects/world/board/players/humanPlayer/behaviorStates
                           gameObjects/world/board/players/humanPlayer/inputStates
                           gameObjects/world/board/tiles
                           gameObjects/world/board/tiles/defaultTile
                           gameObjects/world/board/tiles/desecratedTile)

install(TARGETS barebones DESTINATION ${INSTALL_DIR})
install(DIRECTORY resources DESTINATION ${INSTALL_DIR})
